--- a/view/adminhtml/layout/adminhtml_system_config_edit.xml
+++ b/view/adminhtml/layout/adminhtml_system_config_edit.xml
@@ -1,10 +1,7 @@
-<?xml version="1.0"?>
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-<head>
-    <!-- This color picker library is also loaded by DotDigital_Email - I included these for stores that disable this module -->
-    <script src="Sandeep_HeaderNotification::js/colpick.js"/>
-    <script src="Sandeep_HeaderNotification::js/colorPickerInit.js"/>
-    <css src="Sandeep_HeaderNotification::css/colpick.css"/>
-</head>
+<?xml version="1.0" encoding="UTF-8"?>
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="admin-2columns-left" xsi:noNamespaceSchemaLocation="../../../../../../../lib/internal/Magento/Framework/View/Layout/etc/page_configuration.xsd">
+    <head>
+        <css src="jquery/colorpicker/css/colorpicker.css"/>
+        <css src="Sandeep_NotificationBar::css/info.css"/>
+    </head>
 </page>
