--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -1,15 +1,11 @@
-<?xml version="1.0" ?>
+<?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-	<head>
-        <css src="Sandeep_HeaderNotification::css/custom.css" rel="stylesheet" type="text/css"/>
-    </head>
     <body>
-		<referenceBlock name="header.container">
-            <block name="promo.banner" template="Sandeep_HeaderNotification::header/promo_banner.phtml">
-                <arguments>
-                    <argument name="viewModel" xsi:type="object">Sandeep\HeaderNotification\ViewModel\Header\PromoBanner</argument>
-                </arguments>
-            </block>
-		</referenceBlock>
-	</body>
+        <referenceContainer name='root'>
+            <block   class='Sandeep\NotificationBar\Block\Init' name='Sandeep_NotificationBar_Block_Init' ifconfig='notification_bar/general/enabled' cacheable="false"  />
+        </referenceContainer>
+        <referenceContainer name="after.body.start">
+            <block template="Sandeep_NotificationBar::notification.phtml" class="Sandeep\NotificationBar\Block\Notification" name="sticky.notification" cacheable="false"/>
+        </referenceContainer>
+    </body>
 </page>
